--- a/src/Sveta/Resources/views/english/experience.twig
+++ b/src/Sveta/Resources/views/english/experience.twig
@@ -1,4 +1,4 @@
-{% extends '@en/layout.twig' %}
+{% extends '@english/layout.twig' %}
 
 {% block page_title %}
     Overall background - {{ parent() }}
@@ -10,10 +10,10 @@
 
 {% block navbar %}
     <ul class="nav">
-        <li class=""><a href="/en/home"><i class="icon-home"></i> Home</a></li>
-        <li class=""><a href="/en/service"><i class="icon-briefcase"></i> My services</a></li>
-        <li class="active"><a href="/en/experience"><i class="icon-pencil"></i> Overall background</a></li>
-        <li class=""><a href="/en/quote"><i class="icon-question-sign"></i> Free quote</a></li>
+        <li class=""><a href="/english/home"><i class="icon-home"></i> Home</a></li>
+        <li class=""><a href="/english/service"><i class="icon-briefcase"></i> My services</a></li>
+        <li class="active"><a href="/english/experience"><i class="icon-pencil"></i> Overall background</a></li>
+        <li class=""><a href="/english/quote"><i class="icon-question-sign"></i> Free quote</a></li>
     </ul>
 {% endblock %}
 
@@ -138,6 +138,7 @@
     <p>My diplomas:</p>
     <ul>
         <li>Master of Arts in linguistics and translation and interpretation, English and French. <a href="http://www.univer.kharkov.ua/en">Karazin Kharkov National University</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">Faculty of Foreign Languages</a> Ukraine. Diploma obrained in 2007.</li>
+
         <li>Bachelor of Arts in linguistics and translation, English. <a href="http://www.univer.kharkov.ua/en">Karazin Kharkov National University</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">Faculty of Foreign Languages</a> Ukraine. Diploma obrained in 2006.</li>
     </ul>
 {% endblock %}
