--- a/src/Sveta/Resources/views/english/home.twig
+++ b/src/Sveta/Resources/views/english/home.twig
@@ -1,4 +1,4 @@
-{% extends '@en/layout.twig' %}
+{% extends '@english/layout.twig' %}
 
 {% block page_title %}
     Home - {{ parent() }}
@@ -10,10 +10,10 @@
 
 {% block navbar %}
     <ul class="nav">
-        <li class="active"><a href="/en/home"><i class="icon-home"></i> Home</a></li>
-        <li class=""><a href="/en/service"><i class="icon-briefcase"></i> My services</a></li>
-        <li class=""><a href="/en/experience"><i class="icon-pencil"></i> Overall background</a></li>
-        <li class=""><a href="/en/quote"><i class="icon-question-sign"></i> Free quote</a></li>
+        <li class="active"><a href="/english/home"><i class="icon-home"></i> Home</a></li>
+        <li class=""><a href="/english/service"><i class="icon-briefcase"></i> My services</a></li>
+        <li class=""><a href="/english/experience"><i class="icon-pencil"></i> Overall background</a></li>
+        <li class=""><a href="/english/quote"><i class="icon-question-sign"></i> Free quote</a></li>
     </ul>
 {% endblock %}
 
@@ -24,7 +24,7 @@
 
     <p>My name is Svetlana Merlet (born Tonkonog), I am Ukrainian, presently based in Paris.</p>
 
-    <p>My experience and my professionalism allow me to deliver high quality and reliable <a href="/en/service">language services</a> which fit best your needs.</p>
+    <p>My experience and my professionalism allow me to deliver high quality and reliable <a href="/english/service">language services</a> which fit best your needs.</p>
 
     <p>I deal with four languages:</p>
     <ul>
@@ -34,9 +34,9 @@
         <li>English, studied at the University during 5 years ( Master degree), used professionally since 2005 (language B)</li>
     </ul>
 
-    <p>My professional activity has helped me to gain <a href="/en/experience">experience</a> in the following areas of expertise: medicine, pharmacy, textile, telecommunications, internet, IT, design, fashion, beauty, transport, banking, finance, insurance, science, food industry, travel and tourism.</p>
+    <p>My professional activity has helped me to gain <a href="/english/experience">experience</a> in the following areas of expertise: medicine, pharmacy, textile, telecommunications, internet, IT, design, fashion, beauty, transport, banking, finance, insurance, science, food industry, travel and tourism.</p>
 
-    <p>Please do not hesitate to <a href="/en/quote">contact me</a> if case of necessity.</p>
+    <p>Please do not hesitate to <a href="/english/quote">contact me</a> if case of necessity.</p>
 {% endblock %}
 
 {#% block footer %}{% endblock %#}
