--- a/src/Sveta/Resources/views/english/quote.twig
+++ b/src/Sveta/Resources/views/english/quote.twig
@@ -1,4 +1,4 @@
-{% extends '@en/layout.twig' %}
+{% extends '@english/layout.twig' %}
 
 {% block page_title %}
     Free quote - {{ parent() }}
@@ -10,10 +10,10 @@
 
 {% block navbar %}
     <ul class="nav">
-        <li class=""><a href="/en/home"><i class="icon-home"></i> Home</a></li>
-        <li class=""><a href="/en/service"><i class="icon-briefcase"></i> My services</a></li>
-        <li class=""><a href="/en/experience"><i class="icon-pencil"></i> Overall background</a></li>
-        <li class="active"><a href="/en/quote"><i class="icon-question-sign"></i> Free quote</a></li>
+        <li class=""><a href="/english/home"><i class="icon-home"></i> Home</a></li>
+        <li class=""><a href="/english/service"><i class="icon-briefcase"></i> My services</a></li>
+        <li class=""><a href="/english/experience"><i class="icon-pencil"></i> Overall background</a></li>
+        <li class="active"><a href="/english/quote"><i class="icon-question-sign"></i> Free quote</a></li>
     </ul>
 {% endblock %}
 
