--- a/src/Sveta/Resources/views/french/quote.twig
+++ b/src/Sveta/Resources/views/french/quote.twig
@@ -1,4 +1,4 @@
-{% extends '@fr/layout.twig' %}
+{% extends '@french/layout.twig' %}
 
 {% block page_title %}
     Demande de devis - {{ parent() }}
@@ -10,10 +10,10 @@
 
 {% block navbar %}
     <ul class="nav">
-        <li class=""><a href="/fr/home"><i class="icon-home"></i> Accueil</a></li>
-        <li class=""><a href="/fr/service"><i class="icon-briefcase"></i> Mes services</a></li>
-        <li class=""><a href="/fr/experience"><i class="icon-pencil"></i> Mon parcours</a></li>
-        <li class="active"><a href="/fr/quote"><i class="icon-question-sign"></i> Demande de devis</a></li>
+        <li class=""><a href="/french/home"><i class="icon-home"></i> Accueil</a></li>
+        <li class=""><a href="/french/service"><i class="icon-briefcase"></i> Mes services</a></li>
+        <li class=""><a href="/french/experience"><i class="icon-pencil"></i> Mon parcours</a></li>
+        <li class="active"><a href="/french/quote"><i class="icon-question-sign"></i> Demande de devis</a></li>
     </ul>
 {% endblock %}
 
