--- a/src/Sveta/Resources/views/ukrainian/experience.twig
+++ b/src/Sveta/Resources/views/ukrainian/experience.twig
@@ -1,4 +1,4 @@
-{% extends '@ua/layout.twig' %}
+{% extends '@ukrainian/layout.twig' %}
 
 {% block page_title %}
     Досвід та освіта - {{ parent() }}
@@ -10,10 +10,10 @@
 
 {% block navbar %}
     <ul class="nav">
-        <li class=""><a href="/ua/home"><i class="icon-home"></i> Про мене</a></li>
-        <li class=""><a href="/ua/service"><i class="icon-briefcase"></i> Мої послуги</a></li>
-        <li class="active"><a href="/ua/experience"><i class="icon-pencil"></i> Досвід та освіта</a></li>
-        <li class=""><a href="/ua/quote"><i class="icon-question-sign"></i> Розрахунок вартості замовлення</a></li>
+        <li class=""><a href="/ukrainian/home"><i class="icon-home"></i> Про мене</a></li>
+        <li class=""><a href="/ukrainian/service"><i class="icon-briefcase"></i> Мої послуги</a></li>
+        <li class="active"><a href="/ukrainian/experience"><i class="icon-pencil"></i> Досвід та освіта</a></li>
+        <li class=""><a href="/ukrainian/quote"><i class="icon-question-sign"></i> Розрахунок вартості замовлення</a></li>
     </ul>
 {% endblock %}
 
@@ -139,6 +139,7 @@
 
     <ul>
         <li>2007 рік - <a href="http://www.univer.kharkov.ua">Харьківський національний університет ім. В.Н. Каразіна</a>, <a href="http://www-foreign.univer.kharkov.ua">факультет іноземних мов</a>, кафедра англійської філології. «Магістр» - Філолог, викладач англійської і французької мов та літератури; перекладач англійської і французької мов.</li>
+
         <li>2006 рік  - <a href="http://www.univer.kharkov.ua">Харьківський національний університет ім. В.Н. Каразіна</a>, <a href="http://www-foreign.univer.kharkov.ua">факультет іноземних мов</a>, кафедра англійської філології. «Бакалавр» Філолог, викладач англійської мови та літератури.</li>
     </ul>
 {% endblock %}
