--- a/src/Sveta/Resources/views/ukrainian/home.twig
+++ b/src/Sveta/Resources/views/ukrainian/home.twig
@@ -1,4 +1,4 @@
-{% extends '@ua/layout.twig' %}
+{% extends '@ukrainian/layout.twig' %}
 
 {% block page_title %}
     Про мене - {{ parent() }}
@@ -10,10 +10,10 @@
 
 {% block navbar %}
     <ul class="nav">
-        <li class="active"><a href="/ua/home"><i class="icon-home"></i> Про мене</a></li>
-        <li class=""><a href="/ua/service"><i class="icon-briefcase"></i> Мої послуги</a></li>
-        <li class=""><a href="/ua/experience"><i class="icon-pencil"></i> Досвід та освіта</a></li>
-        <li class=""><a href="/ua/quote"><i class="icon-question-sign"></i> Розрахунок вартості замовлення</a></li>
+        <li class="active"><a href="/ukrainian/home"><i class="icon-home"></i> Про мене</a></li>
+        <li class=""><a href="/ukrainian/service"><i class="icon-briefcase"></i> Мої послуги</a></li>
+        <li class=""><a href="/ukrainian/experience"><i class="icon-pencil"></i> Досвід та освіта</a></li>
+        <li class=""><a href="/ukrainian/quote"><i class="icon-question-sign"></i> Розрахунок вартості замовлення</a></li>
     </ul>
 {% endblock %}
 
@@ -22,9 +22,9 @@
 {% block content %}
     <h3>Вітаю на моєму сайті!</h3>
 
-    <p>Мене звати Світлана Мерлє-Тонконог, я українка, живу в м. Париж. Я надаю <a href="/ua/service">послуги усного та письмового перекладу</a> як на території Франції, так і за її межами.</p>
+    <p>Мене звати Світлана Мерлє-Тонконог, я українка, живу в м. Париж. Я надаю <a href="/ukrainian/service">послуги усного та письмового перекладу</a> як на території Франції, так і за її межами.</p>
 
-    <p>Придбаний мною досвід і професіоналізм забезпечують високу якість і надійність перекладів, що виконуються. Завдяки індивідуальному підходу до кожного <a href="/ua/experience">клієнта</a> і урахуванню специфіки кожного замовлення, робота проходить на належному рівні і завершується у встановлені часові межі.</p>
+    <p>Придбаний мною досвід і професіоналізм забезпечують високу якість і надійність перекладів, що виконуються. Завдяки індивідуальному підходу до кожного <a href="/ukrainian/experience">клієнта</a> і урахуванню специфіки кожного замовлення, робота проходить на належному рівні і завершується у встановлені часові межі.</p>
 
     <p>Я працюю з наступними мовами:</p>
 
