--- a/src/Sveta/Resources/views/ukrainian/service.twig
+++ b/src/Sveta/Resources/views/ukrainian/service.twig
@@ -1,4 +1,4 @@
-{% extends '@ua/layout.twig' %}
+{% extends '@ukrainian/layout.twig' %}
 
 {% block page_title %}
     Мої послуги - {{ parent() }}
@@ -10,10 +10,10 @@
 
 {% block navbar %}
     <ul class="nav">
-        <li class=""><a href="/ua/home"><i class="icon-home"></i> Про мене</a></li>
-        <li class="active"><a href="/ua/service"><i class="icon-briefcase"></i> Мої послуги</a></li>
-        <li class=""><a href="/ua/experience"><i class="icon-pencil"></i> Досвід та освіта</a></li>
-        <li class=""><a href="/ua/quote"><i class="icon-question-sign"></i> Розрахунок вартості замовлення</a></li>
+        <li class=""><a href="/ukrainian/home"><i class="icon-home"></i> Про мене</a></li>
+        <li class="active"><a href="/ukrainian/service"><i class="icon-briefcase"></i> Мої послуги</a></li>
+        <li class=""><a href="/ukrainian/experience"><i class="icon-pencil"></i> Досвід та освіта</a></li>
+        <li class=""><a href="/ukrainian/quote"><i class="icon-question-sign"></i> Розрахунок вартості замовлення</a></li>
     </ul>
 {% endblock %}
 
