--- a/src/Sveta/Resources/views/french/experience.twig
+++ b/src/Sveta/Resources/views/french/experience.twig
@@ -1,4 +1,4 @@
-{% extends '@fr/layout.twig' %}
+{% extends '@french/layout.twig' %}
 
 {% block page_title %}
     Mon parcours - {{ parent() }}
@@ -10,10 +10,10 @@
 
 {% block navbar %}
     <ul class="nav">
-        <li class=""><a href="/fr/home"><i class="icon-home"></i> Accueil</a></li>
-        <li class=""><a href="/fr/service"><i class="icon-briefcase"></i> Mes services</a></li>
-        <li class="active"><a href="/fr/experience"><i class="icon-pencil"></i> Mon parcours</a></li>
-        <li class=""><a href="/fr/quote"><i class="icon-question-sign"></i> Demande de devis</a></li>
+        <li class=""><a href="/french/home"><i class="icon-home"></i> Accueil</a></li>
+        <li class=""><a href="/french/service"><i class="icon-briefcase"></i> Mes services</a></li>
+        <li class="active"><a href="/french/experience"><i class="icon-pencil"></i> Mon parcours</a></li>
+        <li class=""><a href="/french/quote"><i class="icon-question-sign"></i> Demande de devis</a></li>
     </ul>
 {% endblock %}
 
@@ -139,6 +139,7 @@
 
     <ul>
         <li>Master of Arts, option linguistique, interprétation et traduction en Anglais et Français. Diplôme obtenu en 2007 à l'<a href="http://www-foreign.univer.kharkov.ua/eng/index.html">École de langues étrangères</a> de l'<a href="http://www.univer.kharkov.ua/en">Université Nationale Karazine de Kharkov</a> en Ukraine.</li>
+
         <li>Bachelor of Arts, option linguistique, inteprétation et traduction en Anglais. Diplôme obtenu en 2006 à l'<a href="http://www-foreign.univer.kharkov.ua/eng/index.html">École de langues étrangères</a> de l'<a href="http://www.univer.kharkov.ua/en">Université Nationale Karazine de Kharkov</a> en Ukraine.</li>
     </ul>
 {% endblock %}
