--- a/src/Sveta/Resources/views/french/home.twig
+++ b/src/Sveta/Resources/views/french/home.twig
@@ -1,4 +1,4 @@
-{% extends '@fr/layout.twig' %}
+{% extends '@french/layout.twig' %}
 
 {% block page_title %}
     Accueil - {{ parent() }}
@@ -10,10 +10,10 @@
 
 {% block navbar %}
     <ul class="nav">
-        <li class="active"><a href="/fr/home"><i class="icon-home"></i> Accueil</a></li>
-        <li class=""><a href="/fr/service"><i class="icon-briefcase"></i> Mes services</a></li>
-        <li class=""><a href="/fr/experience"><i class="icon-pencil"></i> Mon parcours</a></li>
-        <li class=""><a href="/fr/quote"><i class="icon-question-sign"></i> Demande de devis</a></li>
+        <li class="active"><a href="/french/home"><i class="icon-home"></i> Accueil</a></li>
+        <li class=""><a href="/french/service"><i class="icon-briefcase"></i> Mes services</a></li>
+        <li class=""><a href="/french/experience"><i class="icon-pencil"></i> Mon parcours</a></li>
+        <li class=""><a href="/french/quote"><i class="icon-question-sign"></i> Demande de devis</a></li>
     </ul>
 {% endblock %}
 
@@ -22,9 +22,9 @@
 {% block content %}
     <h3>Bienvenue !</h3>
 
-    <p>Je m'appelle Svetlana Merlet (née Tonkonog), je suis originaire d'Ukraine et je vis actuellement à Paris. Je propose des <a href="/fr/service">services d'interpétation et de traduction</a> adaptés à vos attentes.</p>
+    <p>Je m'appelle Svetlana Merlet (née Tonkonog), je suis originaire d'Ukraine et je vis actuellement à Paris. Je propose des <a href="/french/service">services d'interpétation et de traduction</a> adaptés à vos attentes.</p>
 
-    <p>Mon expérience et mon professionnalisme me permettent de fournir un travail de qualité en répondant au mieux aux exigences de chacun de <a href="/fr/experience">mes clients</a>.</p>
+    <p>Mon expérience et mon professionnalisme me permettent de fournir un travail de qualité en répondant au mieux aux exigences de chacun de <a href="/french/experience">mes clients</a>.</p>
 
     <p>Je maîtrise quatre langues :</p>
 
@@ -37,7 +37,7 @@
 
     <p>Mon activité professionnelle m'a permis d'acquérir de l'expérience dans les domaines suivants : médecine, pharmacie, textile, télécommunications, internet, informatique, design, mode, luxe, transport, banques, finance, assurances, sciences, alimentation.</p>
 
-    <p>N'hésitez pas à <a href="/fr/quote">me contacter</a> en cas de besoin.</p>
+    <p>N'hésitez pas à <a href="/french/quote">me contacter</a> en cas de besoin.</p>
 {% endblock %}
 
 {#% block footer %}{% endblock %#}
