--- a/src/Sveta/Resources/views/layout.twig
+++ b/src/Sveta/Resources/views/layout.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ language }}">
+<html lang="{{ language[0:2] }}">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
