--- a/src/Sveta/Resources/views/russian/experience.twig
+++ b/src/Sveta/Resources/views/russian/experience.twig
@@ -1,4 +1,4 @@
-{% extends '@ru/layout.twig' %}
+{% extends '@russian/layout.twig' %}
 
 {% block page_title %}
     Опыт и образование - {{ parent() }}
@@ -10,10 +10,10 @@
 
 {% block navbar %}
     <ul class="nav">
-        <li class=""><a href="/ru/home"><i class="icon-home"></i> Главная</a></li>
-        <li class=""><a href="/ru/service"><i class="icon-briefcase"></i> Мои услуги</a></li>
-        <li class="active"><a href="/ru/experience"><i class="icon-pencil"></i> Опыт и образование</a></li>
-        <li class=""><a href="/ru/quote"><i class="icon-question-sign"></i> Бесплатный расчёт стоимости</a></li>
+        <li class=""><a href="/russian/home"><i class="icon-home"></i> Главная</a></li>
+        <li class=""><a href="/russian/service"><i class="icon-briefcase"></i> Мои услуги</a></li>
+        <li class="active"><a href="/russian/experience"><i class="icon-pencil"></i> Опыт и образование</a></li>
+        <li class=""><a href="/russian/quote"><i class="icon-question-sign"></i> Бесплатный расчёт стоимости</a></li>
     </ul>
 {% endblock %}
 
@@ -139,6 +139,7 @@
 
     <ul>
         <li>2007 год - <a href="http://www.univer.kharkov.ua/en">Харьковский национальный университет им. В.Н. Каразина</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">факультет иностранных языков</a>, кафедра английской филологии. «Магистр» - Филолог, преподаватель английского и французского языков и литературы; переводчик английского и французского языков.</li>
+
         <li>2006 год  - <a href="http://www.univer.kharkov.ua/en">Харьковский национальный университет им. В.Н. Каразина</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">факультет иностранных языков</a>, кафедра английской филологии. «Бакалавр» Филолог, преподаватель английского языка и литературы.</li>
     </ul>
 {% endblock %}
