--- a/src/Sveta/Resources/views/russian/home.twig
+++ b/src/Sveta/Resources/views/russian/home.twig
@@ -1,4 +1,4 @@
-{% extends '@ru/layout.twig' %}
+{% extends '@russian/layout.twig' %}
 
 {% block page_title %}
     Главная - {{ parent() }}
@@ -10,10 +10,10 @@
 
 {% block navbar %}
     <ul class="nav">
-        <li class="active"><a href="/ru/home"><i class="icon-home"></i> Главная</a></li>
-        <li class=""><a href="/ru/service"><i class="icon-briefcase"></i> Мои услуги</a></li>
-        <li class=""><a href="/ru/experience"><i class="icon-pencil"></i> Опыт и образование</a></li>
-        <li class=""><a href="/ru/quote"><i class="icon-question-sign"></i> Бесплатный расчёт стоимости</a></li>
+        <li class="active"><a href="/russian/home"><i class="icon-home"></i> Главная</a></li>
+        <li class=""><a href="/russian/service"><i class="icon-briefcase"></i> Мои услуги</a></li>
+        <li class=""><a href="/russian/experience"><i class="icon-pencil"></i> Опыт и образование</a></li>
+        <li class=""><a href="/russian/quote"><i class="icon-question-sign"></i> Бесплатный расчёт стоимости</a></li>
     </ul>
 {% endblock %}
 
@@ -22,7 +22,7 @@
 {% block content %}
     <h3>Добро пожаловать!</h3>
 
-    <p>Меня зовут Светлана Мерле-Тонконог, я украинка, на настоящий момент живущая в Париже. Я оказываю <a href="/ru/service">услуги устного и письменного перевода</a>, как на территории Франции, так и за её пределами.</p>
+    <p>Меня зовут Светлана Мерле-Тонконог, я украинка, на настоящий момент живущая в Париже. Я оказываю <a href="/russian/service">услуги устного и письменного перевода</a>, как на территории Франции, так и за её пределами.</p>
 
     <p>Приобретённый мною опыт и профессионализм обеспечивают высокое качество и надежность, выполняемых переводов. Благодаря индивидуальному подходу к каждому клиенту и учёту специфики каждого заказа, работа проходит на должном уровне и завершается в установленные сроки.</p>
 
