--- a/src/Sveta/Resources/views/russian/quote.twig
+++ b/src/Sveta/Resources/views/russian/quote.twig
@@ -1,4 +1,4 @@
-{% extends '@ru/layout.twig' %}
+{% extends '@russian/layout.twig' %}
 
 {% block page_title %}
     Бесплатный расчёт стоимости - {{ parent() }}
@@ -10,10 +10,10 @@
 
 {% block navbar %}
     <ul class="nav">
-        <li class=""><a href="/ru/home"><i class="icon-home"></i> Главная</a></li>
-        <li class=""><a href="/ru/service"><i class="icon-briefcase"></i> Мои услуги</a></li>
-        <li class=""><a href="/ru/experience"><i class="icon-pencil"></i> Опыт и образование</a></li>
-        <li class="active"><a href="/ru/quote"><i class="icon-question-sign"></i> Бесплатный расчёт стоимости</a></li>
+        <li class=""><a href="/russian/home"><i class="icon-home"></i> Главная</a></li>
+        <li class=""><a href="/russian/service"><i class="icon-briefcase"></i> Мои услуги</a></li>
+        <li class=""><a href="/russian/experience"><i class="icon-pencil"></i> Опыт и образование</a></li>
+        <li class="active"><a href="/russian/quote"><i class="icon-question-sign"></i> Бесплатный расчёт стоимости</a></li>
     </ul>
 {% endblock %}
 
