Tweaked English version

--- a/src/Sveta/Resources/views/english/experience.twig
+++ b/src/Sveta/Resources/views/english/experience.twig
@@ -133,13 +133,13 @@
 
     <h3>My qualifications</h3>
 
-    <p>Ever since I was little I have always been interested at foreign languages, that is why I pursued my higher education in this field.</p>
+    <p>Ever since I was little I have always been interested in foreign languages, that is why I pursued my higher education in this field.</p>
 
     <p>My diplomas:</p>
     <ul>
-        <li>Master of Arts in linguistics and translation and interpretation, English and French. <a href="http://www.univer.kharkov.ua/en">Karazin Kharkov National University</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">Faculty of Foreign Languages</a> Ukraine. Diploma obrained in 2007.</li>
+        <li>Master of Arts in linguistics, translation and interpretation in English and French. <a href="http://www.univer.kharkov.ua/en">Karazin Kharkov National University</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">Faculty of Foreign Languages</a> Ukraine. Diploma obrained in 2007.</li>
 
-        <li>Bachelor of Arts in linguistics and translation, English. <a href="http://www.univer.kharkov.ua/en">Karazin Kharkov National University</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">Faculty of Foreign Languages</a> Ukraine. Diploma obrained in 2006.</li>
+        <li>Bachelor of Arts in linguistics in English. <a href="http://www.univer.kharkov.ua/en">Karazin Kharkov National University</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">Faculty of Foreign Languages</a> Ukraine. Diploma obrained in 2006.</li>
     </ul>
 {% endblock %}
 
