--- a/src/Sveta/Resources/views/english/home.twig
+++ b/src/Sveta/Resources/views/english/home.twig
@@ -28,10 +28,10 @@
 
     <p>I deal with four languages:</p>
     <ul>
-        <li>Ukrainian, native language (language A)</li>
-        <li>Russian, native language (language A)</li>
-        <li>French, studied at the University during 5 years (Master degree), used largely since 2007 (language B)</li>
-        <li>English, studied at the University during 5 years ( Master degree), used professionally since 2005 (language B)</li>
+        <li>Ukrainian, native language</li>
+        <li>Russian, native language</li>
+        <li>French, Master degree, used largely since 2007</li>
+        <li>English, Master degree, used professionally since 2005</li>
     </ul>
 
     <p>My professional activity has helped me to gain <a href="/english/experience">experience</a> in the following areas of expertise: medicine, pharmacy, textile, telecommunications, internet, IT, design, fashion, beauty, transport, banking, finance, insurance, science, food industry, travel and tourism.</p>
