Tweaked Russian version

--- a/src/Sveta/Resources/views/russian/experience.twig
+++ b/src/Sveta/Resources/views/russian/experience.twig
@@ -41,7 +41,7 @@
                 <td>сентябрь 2012&nbsp;г.</td>
                 <td><a href="http://www.topmodel-muz.tv/">Топ-Модель По-Русски</a></td>
                 <td>Франция</td>
-                <td>синхронный перевод для жюри реалити шоу</td>
+                <td>синхронный перевод для жюри реалити-шоу</td>
                 <td>английский, французский, русский</td>
             </tr>
             <tr>
@@ -111,7 +111,7 @@
                 <td>июнь 2011&nbsp;г.</td>
                 <td>Частное лицо</td>
                 <td>Черногория</td>
-                <td>сопроводительный перевод для туристов во время экскурсий</td>
+                <td>сопроводительный перевод для туриста во время обзорных экскурсий</td>
                 <td>французский, русский</td>
             </tr>
             <tr>
@@ -125,7 +125,7 @@
                 <td>сентябрь-апрель 2007&nbsp;г.</td>
                 <td>дилер бренда <a href="http://www.professionalbyfama.com/">Professional By Fama</a></td>
                 <td>Украина</td>
-                <td>технический письменный и пофразовый устный переводы в области красоты и моды</td>
+                <td>технический письменный и пофразовый устный переводы в сфере красоты и моды</td>
                 <td>украниский, русский, английский</td>
             </tr>
         </tbody>
