--- a/src/Sveta/Resources/views/russian/service.twig
+++ b/src/Sveta/Resources/views/russian/service.twig
@@ -30,15 +30,15 @@
 
     <h3>Последовательный перевод</h3>
 
-    <p>Последовательный перевод можно рассматривать, как взаимодействие говорящего и переводчика. В отличие от синхронного перевода, при последовательном переводе говорящий время от времени (приблизительно каждые 5 минут) делает в речи паузы, предоставляя таким образом время переводчику на передачу сказанного. В то время, как говорящий произносит отрезки речи, переводчик делает пометки и при возможности использует демонстрируемые слайды. Для осуществления последовательного перевода наличие специальной аппаратуры не требуется. Такой вид перевода подходит для проведения переговоров, деловых встреч, круглых столов при участии малого количества людей.</p>
+    <p>Последовательный перевод можно рассматривать, как взаимодействие говорящего и переводчика. В отличие от синхронного перевода, при последовательном переводе говорящий время от времени (приблизительно каждые 5 минут) делает в речи паузы, предоставляя таким образом время переводчику на передачу сказанного. В то время, как говорящий произносит отрезки речи, переводчик делает пометки и при возможности использует демонстрируемые слайды. Для осуществления последовательного перевода наличие специальной аппаратуры не требуется. Такой вид перевода подходит для проведения переговоров, деловых встреч, круглых столов при участии небольшого количества людей.</p>
 
     <h3>Пофразовый перевод</h3>
 
-    <p>Данный вид устного перевода происходит в форме диалога между собеседниками, которые говорят на двух разных языках. Переводчик осуществляет перевод пофразно, с одного языка на другой, не делая при этом заметок. Такой вид перевода используется с участием малого количества людей при проведении различного рода мероприятий: обсуждений, переговоров, собеседований или посещений профессиональных тематических выставок.</p>
+    <p>Данный вид устного перевода происходит в форме диалога между собеседниками, которые говорят на двух разных языках. Переводчик осуществляет перевод пофразно, с одного языка на другой, не делая при этом заметок. Такой вид перевода подходит для проведения различного рода мероприятий с участием небольшого количества людей: обсуждений, переговоров, собеседований или посещений профессиональных тематических выставок.</p>
 
     <h3>Сопроводительный перевод</h3>
 
-    <p>Сопроводительный перевод предусматривает сопровождение иностранных граждан и делегаций во время их пребывания в незнакомых им городе или стране, прибывших с целью ведения бизнеса или досуга. В этом случае работа переводчика заключается в предоставлении помощи при решений различного рода проблем и вопросов, связанных с прибыванием заграницей. Такой вид перевода широко используется во время выставок, ярморок, различных культурных мероприятий, деловых визитов и т.д.</p>
+    <p>Сопроводительный перевод предусматривает сопровождение иностранных граждан и делегаций во время их пребывания в незнакомых им городе или стране, прибывших с целью ведения бизнеса или досуга. В этом случае работа переводчика заключается в предоставлении помощи при решении различного рода проблем и вопросов, связанных с прибыванием заграницей. Такой вид перевода широко используется во время выставок, ярморок, различных культурных мероприятий, деловых визитов и т.д.</p>
 
     <h3>Технический письменный перевод</h3>
 
