--- a/src/Sveta/Resources/views/russian/home.twig
+++ b/src/Sveta/Resources/views/russian/home.twig
@@ -24,15 +24,15 @@
 
     <p>Меня зовут Светлана Мерле-Тонконог, я украинка, на настоящий момент живущая в Париже. Я оказываю <a href="/russian/service">услуги устного и письменного перевода</a>, как на территории Франции, так и за её пределами.</p>
 
-    <p>Приобретённый мною опыт и профессионализм обеспечивают высокое качество и надежность, выполняемых переводов. Благодаря индивидуальному подходу к каждому клиенту и учёту специфики каждого заказа, работа проходит на должном уровне и завершается в установленные сроки.</p>
+    <p>Приобретённый мною <a href="/russian/experience">опыт</a> и профессионализм обеспечивают высокое качество и надежность, выполняемых переводов. Благодаря индивидуальному подходу к каждому клиенту и учёту специфики каждого заказа, работа проходит на должном уровне и завершается в установленные сроки.</p>
 
     <p>Я работаю со следующими языками:</p>
 
     <ul>
         <li>Украинский язык, родной;</li>
         <li>Русский язык, родной;</li>
-        <li>Французский язык, (степень Магистр, пять лет изучения в университете), повседневно используется во всех сферах жизни с 2007 года;</li>
-        <li>Английский язык, (степень Магистр, пять лет изучения в университете), используется в профессиональной жизни с 2005 года.</li>
+        <li>Французский язык, степень Магистра, повседневно используется во всех сферах жизни с 2007 года;</li>
+        <li>Английский язык, степень Магистра, используется в профессиональной жизни с 2005 года.</li>
     </ul>
 
     <p>За время моей профессиональной деятельности, я приобрела опыт работы в следующих областях: медицина, фармация, текстиль, телекоммуникации, IT-технологии, дизайн, мода, красота, транспорт, банковское дело, финансы, страхование, наука, пищевая промышленность, путешествия и туризм.</p>
