Tweaked Ukrainian version

--- a/src/Sveta/Resources/views/ukrainian/experience.twig
+++ b/src/Sveta/Resources/views/ukrainian/experience.twig
@@ -41,7 +41,7 @@
                 <td>вересень 2012&nbsp;р.</td>
                 <td><a href="http://www.topmodel-muz.tv/">Топ- Модель По-Російські</a></td>
                 <td>Франція</td>
-                <td>синхронний переклад для журі реаліті шоу</td>
+                <td>синхронний переклад для журі реаліті-шоу</td>
                 <td>англійська, французька, російська</td>
             </tr>
             <tr>
@@ -111,7 +111,7 @@
                 <td>червень 2011&nbsp;р.</td>
                 <td>Приватна особа</td>
                 <td>Чорногорія</td>
-                <td>супровідний переклад для туристів під час екскурсій</td>
+                <td>супровідний переклад для туриста під час оглядових екскурсій</td>
                 <td>французька, російська</td>
             </tr>
             <tr>
