--- a/src/Sveta/Resources/views/russian/quote.twig
+++ b/src/Sveta/Resources/views/russian/quote.twig
@@ -23,64 +23,70 @@
 {% block content %}
     <h3>Бесплатный расчёт стоимости заказа</h3>
 
-    <form class="form-horizontal">
+    {% if app.request.get('step') == 'form' %}
+    <form class="form-horizontal" method="post">
         <div class="control-group">
-            <label class="control-label">Имя</label><!-- prénom -->
-            <div class="controls"><input class="span6" type="text" /></div>
+            <label class="control-label">Имя</label>
+            <div class="controls"><input class="span6" name="form[lastName]" type="text" /></div>
         </div>
         <div class="control-group">
-            <label class="control-label">Фамилия</label><!-- nom -->
-            <div class="controls"><input class="span6" type="text" /></div>
+            <label class="control-label">Фамилия</label>
+            <div class="controls"><input class="span6" name="form[firstName]" type="text" /></div>
         </div>
         <div class="control-group">
             <label class="control-label">Название компании</label>
-            <div class="controls"><input class="span6" type="text" /></div>
+            <div class="controls"><input class="span6" name="form[company]" type="text" /></div>
         </div>
         <div class="control-group">
             <label class="control-label">Телефон</label>
-            <div class="controls"><input class="span6" type="text" /></div>
+            <div class="controls"><input class="span6" name="form[phone]" type="text" /></div>
         </div>
         <div class="control-group">
             <label class="control-label">E-mail</label>
-            <div class="controls"><input class="span6" type="text" /></div>
+            <div class="controls"><input class="span6" name="form[email]" type="text" /></div>
         </div>
         <div class="control-group">
             <label class="control-label">Необходимая услуга</label>
             <div class="controls">
-                <select class="span6">
-                    <option>синхронный перевод</option>
-                    <option>шушотаж</option>
-                    <option>последовательный перевод</option>
-                    <option>пофразовый перевод</option>
-                    <option>сопроводительный перевод</option>
-                    <option>письменный технический перевод</option>
-                    <option>другое</option>
+                <select class="span6" name="form[service]">
+                    <option value="синхронный перевод">синхронный перевод</option>
+                    <option value="шушотаж">шушотаж</option>
+                    <option value="последовательный перевод">последовательный перевод</option>
+                    <option value="пофразовый перевод">пофразовый перевод</option>
+                    <option value="сопроводительный перевод">сопроводительный перевод</option>
+                    <option value="письменный технический перевод">письменный технический перевод</option>
+                    <option value="другое">другое</option>
                 </select>
             </div>
         </div>
         <div class="control-group">
             <label class="control-label">Тематика перевода</label>
-            <div class="controls"><input class="span6" type="text" /></div>
+            <div class="controls"><input class="span6" name="form[area]" type="text" /></div>
         </div>
         <div class="control-group">
             <label class="control-label">Языки перевода</label>
             <div class="controls">
-                <label class="checkbox inline"><input type="checkbox" />французский</label>
-                <label class="checkbox inline"><input type="checkbox" />английский</label>
-                <label class="checkbox inline"><input type="checkbox" />русский</label>
-                <label class="checkbox inline"><input type="checkbox" />украинский</label>
+                <label class="checkbox inline"><input name="form[languages][]" type="checkbox" value="французский" />французский</label>
+                <label class="checkbox inline"><input name="form[languages][]" type="checkbox" value="английский" />английский</label>
+                <label class="checkbox inline"><input name="form[languages][]" type="checkbox" value="русский" />русский</label>
+                <label class="checkbox inline"><input name="form[languages][]" type="checkbox" value="украинский" />украинский</label>
             </div>
         </div>
         <div class="control-group">
             <label class="control-label">Детали заказа</label>
             <div class="controls">
-                <textarea class="span10" rows="10"></textarea>
+                <textarea class="span10" name="form[details]" rows="10"></textarea>
             </div>
         </div>
         <div class="form-action">
             <input class="btn btn-large btn-primary" type="submit" value="Отправить запрос" />
         </div>
     </form>
+    {% else %}
+        <p>Спасибо, что нашли время и заполнили данную форму.</p>
+
+        <p>Я изучу Ваш запрос и свяжусь с Вами в кратчайшие сроки.</p>
+    {% endif %}
 
     <h3>Мои контактные данные</h3>
 
